@@ -1,48 +1,46 @@
-
-
-LoadModule authn_core_module    "@PREFIX@/modules/mod_authn_core.so"
-LoadModule authz_host_module    "@PREFIX@/modules/mod_authz_host.so"
-LoadModule authz_groupfile_module "@PREFIX@/modules/mod_authz_groupfile.so"
-LoadModule authz_user_module    "@PREFIX@/modules/mod_authz_user.so"
-LoadModule authz_core_module    "@PREFIX@/modules/mod_authz_core.so"
-LoadModule access_compat_module "@PREFIX@/modules/mod_access_compat.so"
-LoadModule auth_basic_module    "@PREFIX@/modules/mod_auth_basic.so"
-LoadModule cache_module         "@PREFIX@/modules/mod_cache.so"
-LoadModule cache_disk_module    "@PREFIX@/modules/mod_cache_disk.so"
-LoadModule cache_socache_module "@PREFIX@/modules/mod_cache_socache.so"
-LoadModule socache_shmcb_module "@PREFIX@/modules/mod_socache_shmcb.so"
-LoadModule dumpio_module        "@PREFIX@/modules/mod_dumpio.so"
-LoadModule reqtimeout_module    "@PREFIX@/modules/mod_reqtimeout.so"
-LoadModule filter_module        "@PREFIX@/modules/mod_filter.so"
-LoadModule mime_module          "@PREFIX@/modules/mod_mime.so"
-LoadModule log_config_module    "@PREFIX@/modules/mod_log_config.so"
-LoadModule logio_module         "@PREFIX@/modules/mod_logio.so"
-LoadModule env_module           "@PREFIX@/modules/mod_env.so"
-LoadModule headers_module       "@PREFIX@/modules/mod_headers.so"
-LoadModule setenvif_module      "@PREFIX@/modules/mod_setenvif.so"
-LoadModule version_module       "@PREFIX@/modules/mod_version.so"
-LoadModule slotmem_shm_module   "@PREFIX@/modules/mod_slotmem_shm.so"
-LoadModule ssl_module           "@PREFIX@/modules/mod_ssl.so"
-LoadModule unixd_module         "@PREFIX@/modules/mod_unixd.so"
-LoadModule status_module        "@PREFIX@/modules/mod_status.so"
-LoadModule autoindex_module     "@PREFIX@/modules/mod_autoindex.so"
-LoadModule cgid_module          "@PREFIX@/modules/mod_cgid.so"
-LoadModule dir_module           "@PREFIX@/modules/mod_dir.so"
-LoadModule alias_module         "@PREFIX@/modules/mod_alias.so"
-LoadModule rewrite_module       "@PREFIX@/modules/mod_rewrite.so"
-LoadModule deflate_module       "@PREFIX@/modules/mod_deflate.so"
-LoadModule watchdog_module      "@PREFIX@/modules/mod_watchdog.so"
-LoadModule proxy_module         "@PREFIX@/modules/mod_proxy.so"
-LoadModule proxy_http_module    "@PREFIX@/modules/mod_proxy_http.so"
-LoadModule proxy_balancer_module "@PREFIX@/modules/mod_proxy_balancer.so"
-LoadModule proxy_hcheck_module  "@PREFIX@/modules/mod_proxy_hcheck.so"
+@LOAD_LOG_CONFIG@LoadModule log_config_module    "@LIBEXEC_DIR@/mod_log_config.so"
+@LOAD_LOGIO@LoadModule logio_module         "@LIBEXEC_DIR@/mod_logio.so"
+@LOAD_UNIXD@LoadModule unixd_module         "@LIBEXEC_DIR@/mod_unixd.so"
+@LOAD_VERSION@LoadModule version_module       "@LIBEXEC_DIR@/mod_version.so"
+@LOAD_WATCHDOG@LoadModule watchdog_module      "@LIBEXEC_DIR@/mod_watchdog.so"
+LoadModule authn_core_module    "@LIBEXEC_DIR@/mod_authn_core.so"
+LoadModule authz_host_module    "@LIBEXEC_DIR@/mod_authz_host.so"
+LoadModule authz_groupfile_module "@LIBEXEC_DIR@/mod_authz_groupfile.so"
+LoadModule authz_user_module    "@LIBEXEC_DIR@/mod_authz_user.so"
+LoadModule authz_core_module    "@LIBEXEC_DIR@/mod_authz_core.so"
+LoadModule access_compat_module "@LIBEXEC_DIR@/mod_access_compat.so"
+LoadModule auth_basic_module    "@LIBEXEC_DIR@/mod_auth_basic.so"
+LoadModule cache_module         "@LIBEXEC_DIR@/mod_cache.so"
+LoadModule cache_disk_module    "@LIBEXEC_DIR@/mod_cache_disk.so"
+LoadModule cache_socache_module "@LIBEXEC_DIR@/mod_cache_socache.so"
+LoadModule socache_shmcb_module "@LIBEXEC_DIR@/mod_socache_shmcb.so"
+LoadModule dumpio_module        "@LIBEXEC_DIR@/mod_dumpio.so"
+LoadModule reqtimeout_module    "@LIBEXEC_DIR@/mod_reqtimeout.so"
+LoadModule filter_module        "@LIBEXEC_DIR@/mod_filter.so"
+LoadModule mime_module          "@LIBEXEC_DIR@/mod_mime.so"
+LoadModule env_module           "@LIBEXEC_DIR@/mod_env.so"
+LoadModule headers_module       "@LIBEXEC_DIR@/mod_headers.so"
+LoadModule setenvif_module      "@LIBEXEC_DIR@/mod_setenvif.so"
+LoadModule slotmem_shm_module   "@LIBEXEC_DIR@/mod_slotmem_shm.so"
+LoadModule ssl_module           "@LIBEXEC_DIR@/mod_ssl.so"
+LoadModule status_module        "@LIBEXEC_DIR@/mod_status.so"
+LoadModule autoindex_module     "@LIBEXEC_DIR@/mod_autoindex.so"
+LoadModule cgid_module          "@LIBEXEC_DIR@/mod_cgid.so"
+LoadModule dir_module           "@LIBEXEC_DIR@/mod_dir.so"
+LoadModule alias_module         "@LIBEXEC_DIR@/mod_alias.so"
+LoadModule rewrite_module       "@LIBEXEC_DIR@/mod_rewrite.so"
+LoadModule deflate_module       "@LIBEXEC_DIR@/mod_deflate.so"
+LoadModule proxy_module         "@LIBEXEC_DIR@/mod_proxy.so"
+LoadModule proxy_http_module    "@LIBEXEC_DIR@/mod_proxy_http.so"
+LoadModule proxy_balancer_module "@LIBEXEC_DIR@/mod_proxy_balancer.so"
+LoadModule proxy_hcheck_module  "@LIBEXEC_DIR@/mod_proxy_hcheck.so"
 
 # Do not load the server one, but the local module
-LoadModule http2_module         "@PREFIX@/modules/mod_http2.so"
+LoadModule http2_module         "@LIBEXEC_DIR@/mod_http2.so"
 #LoadModule http2_module         "@MODULE_SRC@/.libs/mod_http2.so"
 
 # Do not load the server one, but the local module
-LoadModule proxy_http2_module   "@PREFIX@/modules/mod_proxy_http2.so"
+LoadModule proxy_http2_module   "@LIBEXEC_DIR@/mod_proxy_http2.so"
 #LoadModule proxy_http2_module   "@MODULE_SRC@/.libs/mod_proxy_http2.so"
 
 # Load the local test module also into the server
